<resources>
    <string name="app_name">Easy Learning</string>
    <string name="password">Contraseña</string>
    <string name="signin_with_phone">ingresar con teléfono</string>
    <string name="signin">Ingresar</string>
    <string name="email">Correo electrónico</string>
    <string name="phone">Celular</string>
    <string name="lastname">Apellidos</string>
    <string name="name">Nombres</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_failed">Fallo al ingresar</string>

    <string name="FACEBOOK_APP_ID">1311989565578420</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">014926972a83f6b8b9b67f5d7c29bc05</string>
    <string name="create_account">Crear cuenta</string>
    <string name="agree">Aceptar</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="save_changed">Guardar camnbios</string>
    <string name="modify_my_profile">Modificar mis datos</string>
    <string name="age">Edad</string>
    <string name="birthdate">Nacimiento</string>
    <string name="sign_up_as_assessor">Registrarme como asesor</string>
    <string name="genre">Género</string>
    <string name="document">Documento</string>
    <string name="academic">Grado académico</string>
    <string name="rating">Calificación</string>
    <string name="logout">Cerrar sesión</string>
    <string name="save_data">Guardar datos</string>
    <string name="signup_as_assessor">Registrarme como asesor</string>

</resources>
