<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.assessor.view.AssessorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/assessor_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/assessor_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assessor_toolbar"
        app:riv_border_width="0dp"
        app:riv_corner_radius="40dip"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/assessor_add_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessor_image">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessor_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/genre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/assessor_add_document"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessor_document"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/document" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/assessor_add_academic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/assessor_academic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/academic" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/assessor_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_primary"
        android:text="@string/save_data"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/assessor_add_genre"
        android:layout_width="@dimen/easy_32"
        android:layout_height="@dimen/easy_32"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_keyboard"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout8" />

    <Button
        android:id="@+id/assessor_add_document"
        android:layout_width="@dimen/easy_32"
        android:layout_height="@dimen/easy_32"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_keyboard"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout7" />

    <Button
        android:id="@+id/assessor_add_academic"
        android:layout_width="@dimen/easy_32"
        android:layout_height="@dimen/easy_32"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_keyboard"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout10" />

</androidx.constraintlayout.widget.ConstraintLayout>